--- a/role.yaml
+++ b/role.yaml
@@ -27,3 +27,7 @@ rules:
    kind: Role #this must be Role or ClusterRole
    name: fresher # this must match the name of the Role or ClusterRole you wish to bind to
    apiGroup: rbac.authorization.k8s.io
+
+
+   #namespace=role, rolebinding
+   #cluster=clusterrole,rolebinding
